2008-11-20  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wifi.c
		- (wireless_get_secrets): really fix focus stealing prevention for real

2008-11-20  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
		- (read_one_setting_value_from_gconf, write_one_secret_to_keyring,
		   copy_one_setting_value_to_gconf): update for NMSettingValueIterFn
			changes	
		- (copy_one_setting_value_to_gconf): remove bits than set secrets in
			the keyring which couldn't possibly be called from here

2008-11-20  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
		- (string_in_list): implement locally now that nm_utils_string_in_list
			was removed from libnm-util

2008-11-20  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wifi.c
		- (wireless_dialog_response_cb): update for nm_setting_new_from_hash()

2008-11-19  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/nma-gconf-connection.c
	  src/applet-device-wifi.c
		- Fix up compare flag names

2008-11-19  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/nma-gconf-connection.c
		- (nma_gconf_connection_changed): handle error returned from
			nm_connection_replace_settings()

2008-11-18  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method-tls.c
		- (eap_method_tls_new, revalidate): don't validate here, since the
			validation would only be for the TLS object, which may not be
			what's actually selected in the security combo

	* src/wireless-dialog.c
		- (internal_init, revalidate): instead, validate here from an idle
			handler to match revalidation done in nm-connection-editor.c.
			Fixes a bug introduced by the PKCS#12 support where the secrets
			dialog's OK button wouldn't be initially enabled

2008-11-15  Dan Williams  <dcbw@redhat.com>

	* configure.ac
	  src/Makefile.am
	  src/polkit-helpers/Makefile.am
	  src/polkit-helpers/README
	  src/polkit-helpers/polkit-gnome-action.c
	  src/polkit-helpers/polkit-gnome-action.h